# ROV_Test

./: readme.txt
ROV/: CMakeLists.txt  package.xml
ROV/launch/: ROV.launch
ROV/src/: left_camera_subscriber .py  right_camera_subscriber.py  sensor_imu_subcriber.py  sensor_pressure_subscriber.py  thruster0.py  thruster1.py  thruster2.py  thruster3.py  thruster4.py  thruster5.py  thruster6.py  thruster7.py
