<?xml version="1.0"?>
<package format="2">
  <name>ROV</name>
  <version>0.0.0</version>
  <description>The ROV package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alaa_abdelmenam@todo.todo">alaa_abdelmenam</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ROV</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>uuv_assistants</build_depend>
  <build_depend>uuv_auv_control_allocator</build_depend>
  <build_depend>uuv_control_cascaded_pid</build_depend>
  <build_depend>uuv_control_msgs</build_depend>
  <build_depend>uuv_control_utils</build_depend>
  <build_depend>uuv_descriptions</build_depend>
  <build_depend>uuv_gazebo</build_depend>
  <build_depend>uuv_gazebo_plugins</build_depend>
  <build_depend>uuv_gazebo_ros_plugins</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>uuv_gazebo_worlds</build_depend>
  <build_depend>uuv_simulator</build_depend>
  <build_depend>uuv_teleop</build_depend>
  <build_depend>uuv_thruster_manager</build_depend>
  <build_depend>uuv_trajectory_control</build_depend>
  <build_depend>uuv_world_plugins</build_depend>
  <build_depend>uuv_world_ros_plugins</build_depend>
  <build_depend>uuv_world_ros_plugins_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>uuv_assistants</build_export_depend>
  <build_export_depend>uuv_auv_control_allocator</build_export_depend>
  <build_export_depend>uuv_control_cascaded_pid</build_export_depend>
  <build_export_depend>uuv_control_msgs</build_export_depend>
  <build_export_depend>uuv_control_utils</build_export_depend>
  <build_export_depend>uuv_descriptions</build_export_depend>
  <build_export_depend>uuv_gazebo</build_export_depend>
  <build_export_depend>uuv_gazebo_plugins</build_export_depend>
  <build_export_depend>uuv_gazebo_ros_plugins</build_export_depend>
  <build_export_depend>uuv_gazebo_ros_plugins_msgs</build_export_depend>
  <build_export_depend>uuv_gazebo_worlds</build_export_depend>
  <build_export_depend>uuv_simulator</build_export_depend>
  <build_export_depend>uuv_teleop</build_export_depend>
  <build_export_depend>uuv_thruster_manager</build_export_depend>
  <build_export_depend>uuv_trajectory_control</build_export_depend>
  <build_export_depend>uuv_world_plugins</build_export_depend>
  <build_export_depend>uuv_world_ros_plugins</build_export_depend>
  <build_export_depend>uuv_world_ros_plugins_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_auv_control_allocator</exec_depend>
  <exec_depend>uuv_control_cascaded_pid</exec_depend>
  <exec_depend>uuv_control_msgs</exec_depend>
  <exec_depend>uuv_control_utils</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo</exec_depend>
  <exec_depend>uuv_gazebo_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_gazebo_worlds</exec_depend>
  <exec_depend>uuv_simulator</exec_depend>
  <exec_depend>uuv_teleop</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>uuv_world_plugins</exec_depend>
  <exec_depend>uuv_world_ros_plugins</exec_depend>
  <exec_depend>uuv_world_ros_plugins_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
